[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/modifiers/inspector/add_modifier_dialog.gd" type="Script" id=1]

[node name="AddModifierDialog" type="WindowDialog"]
margin_right = 304.0
margin_bottom = 124.0
rect_min_size = Vector2( 304, 124 )
size_flags_horizontal = 0
size_flags_vertical = 0
window_title = "Add Modifier"
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_right = 296.0
margin_bottom = 116.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 288.0
margin_bottom = 74.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 30.0
margin_right = 142.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "Modifier Name"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 146.0
margin_top = 25.0
margin_right = 288.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 4
placeholder_text = "name"
caret_blink = true

[node name="ErrorLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 288.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 8
text = "Invalid or already defined modifier name."

[node name="Footer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 288.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 8
alignment = 1

[node name="OkCreateButton" type="Button" parent="MarginContainer/VBoxContainer/Footer"]
margin_left = 55.0
margin_right = 86.0
margin_bottom = 20.0
size_flags_horizontal = 6
text = "OK"

[node name="CancelButon" type="Button" parent="MarginContainer/VBoxContainer/Footer"]
margin_left = 190.0
margin_right = 244.0
margin_bottom = 20.0
size_flags_horizontal = 6
text = "Cancel"
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Footer/OkCreateButton" to="." method="_on_OkCreateButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Footer/CancelButon" to="." method="hide"]
